# mcr

./: .gitignore  README.md
backend/: README.md  function_app.py  requirements.txt
frontend/: .gitignore  README.md  codes.txt  components.d.ts  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  params.ts  share.ts  store.ts  types.d.ts
frontend/src/assets/: base.css  main.css
frontend/src/components/: DetailCol.vue  HelpModal.vue  IntroModal.vue  SchoolCard.vue  SchoolMap.vue  SchoolModal.vue  SelectModal.vue  ShareDrawer.vue  SliderInput.vue  UserParam.vue  UserParamItem.vue  WebsiteTitle.vue  WebsiteTour.vue
frontend/src/components/icons/: IconR.vue
hackathon/: README.md
scraper/: README.md  parse_niche.py  pyproject.toml  scrape.user.js
