[tool.poetry]
name = "mcr-scraper"
version = "0.1.0"
description = "Scraper for the MCR website"
authors = ["david-why <david_why@outlook.com>"]
readme = "README.md"

package-mode = false

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
